# R3D

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
include/r3d/: color.hpp  event.hpp  log.hpp  matrix.hpp  renderer.hpp  tick.hpp  vec.hpp  window.hpp
include/r3d/impl/: assert.hpp  log.hpp
src/: CMakeLists.txt  assert.cpp  renderer.cpp  tick.cpp  vec.cpp  window.cpp
tests/: CMakeLists.txt  basic_cube_test.cpp  basic_renderer_test.cpp  basic_shaded_cube.cpp  basic_test.cpp  correct_cube.cpp  vec_test.cpp  window_test.cpp
